--- a/FlaskIntro.ipynb
+++ b/FlaskIntro.ipynb
@@ -1,1 +1,104 @@
- 
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyN1r2Av+vtRLWswmXMofct2",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dnagenome/FlaskIntro/blob/main/FlaskIntro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Flask is a lightweight Python framework to make websites and web apps\n",
+        "Enables building of REST API's\n",
+        "Flask + Extensions increases the functionality of Flask\n"
+      ],
+      "metadata": {
+        "id": "XlRGFuHtnzpd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install flask-ngrok"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xYmYW-R-qaPk",
+        "outputId": "86bc4b79-5189-45b5-db23-057ccde31bd2"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: flask-ngrok in /usr/local/lib/python3.10/dist-packages (0.0.25)\n",
+            "Requirement already satisfied: Flask>=0.8 in /usr/local/lib/python3.10/dist-packages (from flask-ngrok) (2.2.5)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from flask-ngrok) (2.31.0)\n",
+            "Requirement already satisfied: Werkzeug>=2.2.2 in /usr/local/lib/python3.10/dist-packages (from Flask>=0.8->flask-ngrok) (3.0.1)\n",
+            "Requirement already satisfied: Jinja2>=3.0 in /usr/local/lib/python3.10/dist-packages (from Flask>=0.8->flask-ngrok) (3.1.3)\n",
+            "Requirement already satisfied: itsdangerous>=2.0 in /usr/local/lib/python3.10/dist-packages (from Flask>=0.8->flask-ngrok) (2.1.2)\n",
+            "Requirement already satisfied: click>=8.0 in /usr/local/lib/python3.10/dist-packages (from Flask>=0.8->flask-ngrok) (8.1.7)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->flask-ngrok) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->flask-ngrok) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->flask-ngrok) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->flask-ngrok) (2023.11.17)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from Jinja2>=3.0->Flask>=0.8->flask-ngrok) (2.1.4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#main.py\n",
+        "from flask import Flask\n",
+        "#from flask_ngrok import run_with_ngrok\n",
+        "\n",
+        "app = Flask(__name__)\n",
+        "\n",
+        "#run_with_ngrok(app)\n",
+        "\n",
+        "@app.route('/')\n",
+        "def index():\n",
+        "  return \"Welcome to the index\"\n",
+        "\n",
+        "@app.route('/about')\n",
+        "def about():\n",
+        "  return \"About Us\"\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  app.run()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Eh6AMKlpoa80"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
